[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happyhoodagents"
version = "0.0.5"
authors = [
  { name="Author", email="cjardin@jardinlabs.com" },
]
description = "Household Agent Simulation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

